# quicks-qcc

./: .gitattributes  .gitignore  CMakeLists.txt  NOTICE.md  README.md
src/app/: main.c
src/arena/: README.md  arena.c  arena.h
src/ast/: README.md  ast.c  ast.h
src/consteval/: README.md  consteval.c  consteval.h
src/convert/: README.md  convert.c  convert.h
src/convert/internal/: charconst.c  charconst.h  encoding.c  encoding.h  escape.c  escape.h  floatconst.c  floatconst.h  intconst.c  intconst.h  strlit.c  strlit.h
src/diag/: README.md  diag.c  diag.h
src/intern/: README.md  intern.c  intern.h
src/lexer/: README.md  lexer.c  lexer.h
src/lexer/internal/: cursor.c  cursor.h  punct.c  punct.h  scan.c  scan.h
src/parser/: README.md  parser.c  parser.h
src/pp/: README.md  pp.c  pp.h  ptok_list.c  render.c  render.h
src/pp/internal/: builtin.c  builtin.h  ceval.c  ceval.h  cond.c  cond.h  directive.c  directive.h  expand.c  expand.h  glue.c  glue.h  hideset.c  hideset.h  incl.c  incl.h  macro.c  macro.h  stream.c  stream.h
src/source/: README.md  source.c  source.h
src/status/: README.md  status.c  status.h
src/symtab/: README.md  symtab.c  symtab.h
src/token/: README.md  token.c  token.h
src/type/: README.md  type.c  type.h
tests/: CMakeLists.txt  qtest.h  test_arena.c  test_ast.c  test_consteval.c  test_convert.c  test_decl.c  test_diag.c  test_extdef.c  test_hideset.c  test_include.c  test_intern.c  test_lexer.c  test_macro.c  test_parser.c  test_pp.c  test_render.c  test_source.c  test_status.c  test_stmt.c  test_symtab.c  test_token.c  test_type.c
